@@ -25,10 +25,6 @@ body {
     min-width: 740px;
 }
 
-div.documentwrapper {
-    float: none;
-}
-
 div.document {
     background-color: white;
     text-align: left;
