@@ -17,6 +17,9 @@ Release 1.0 (in development)
 Release 0.6.2 (in development)
 ==============================
 
+* #150: Fix display of the "sphinxdoc" theme on Internet Explorer
+  versions 6 and 7.
+
 * #146: Don't fail to generate LaTeX when the user has an active
   ``.docutils`` configuration.
 
